@@ -1,6 +1,6 @@
 Package: Rcmdr
 Version: 2.0-4
-Date: 2014/01/24
+Date: 2014/03/26
 Title: R Commander
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Milan", "Bouchet-Valat", role = "aut"),
